--- a/Notebooks/automl_amlsdkv2_score_bestmodel_local.ipynb
+++ b/Notebooks/automl_amlsdkv2_score_bestmodel_local.ipynb
@@ -13,7 +13,10 @@
    "source": [
     "The training environment in AML compute cluster can be different than the one locally. We need to create a new Conda environment in the repo so that model can be loaded locally. \n",
     "\n",
-    "    conda env create -f conda_env.yml"
+    "    conda env create -f conda_env.yml\n",
+    "\n",
+    "\n",
+    "Attach this notebook to the new conda environment. "
    ]
   },
   {
@@ -46,15 +49,32 @@
     "import joblib\n",
     "import os\n",
     "\n",
-    "model_path = os.path.join(\"./artifact_downloads/outputs\", \"mlflow-model\" ,\"model.pkl\")\n",
+    "model_path = os.path.join(\".././artifact_downloads/outputs\", \"mlflow-model\" ,\"model.pkl\")\n",
     "model = joblib.load(model_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PipelineWithYTransformations(Pipeline={'memory': None,\n",
+       "                                       'steps': [('datatransformer',\n",
+       "                                                  DataTransformer(enable_dnn=False, enable_feature_sweeping=False, feature_sweeping_config={}, feature_sweeping_timeout=86400, featurization_config=None, force_text_dnn=False, is_cross_validation=True, is_onnx_compatible=True, observer=None, task='classification', working_dir='c:\\...\n",
+       "                                                  PreFittedSoftVotingClassifier(classification_labels=array([0, 1], dtype=int64), estimators=[('1', Pipeline(memory=None, steps=[('maxabsscaler', MaxAbsScaler(copy=True)), ('lightgbmclassifier', LightGBMClassifier(boosting_type='gbdt', colsample_bytree=0.6933333333333332, learning_rate=0.09473736842105263, max_bin=110, max_depth=8, min_child_weight=6, min_data_in_leaf=0.003457931034482759, min_split_gain=1, n_estimators=25, n_jobs=-1, num_leaves=227, problem_info=ProblemInfo(gpu_training_param_dict={'processing_unit_type': 'cpu'}), random_state=None, reg_alpha=0.9473684210526315, reg_lambda=0.42105263157894735, subsample=0.49526315789473685))], verbose=False)), ('0', Pipeline(memory=None, steps=[('maxabsscaler', MaxAbsScaler(copy=True)), ('lightgbmclassifier', LightGBMClassifier(min_data_in_leaf=20, n_jobs=-1, problem_info=ProblemInfo(gpu_training_param_dict={'processing_unit_type': 'cpu'}), random_state=None))], verbose=False))], flatten_transform=None, weights=[0.5, 0.5]))],\n",
+       "                                       'verbose': False},\n",
+       "                             y_transformer={},\n",
+       "                             y_transformer_name='LabelEncoder')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model"
    ]
@@ -75,13 +95,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_unique_dataset_name = \"1155c2a891714097b099ade1fee4bddb\" # Replace with your unique dataset name\n",
+    "my_unique_test_data_set_path = f'.././telcocustomerchurn/{my_unique_dataset_name}_test/{my_unique_dataset_name}-WA_Fn-UseC_-Telco-Customer-Churn_Test.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "test_data_orig = pd.read_csv(\"./wa_telco_customer_churn_test_data/WA_Fn-UseC_-Telco-Customer-Churn_Test.csv\")\n",
+    "test_data_orig = pd.read_csv(my_unique_test_data_set_path)\n",
     "\n",
     "test_data = test_data_orig.drop(\"Churn\", axis=1)\n",
     "test_data[\"Partner\"] = test_data[\"Partner\"].map({\"Yes\": True, \"No\": False})\n",
@@ -100,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,18 +158,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['customerID', 'gender', 'SeniorCitizen', 'Partner', 'Dependents',\n",
+       "       'tenure', 'PhoneService', 'MultipleLines', 'InternetService',\n",
+       "       'OnlineSecurity', 'OnlineBackup', 'DeviceProtection', 'TechSupport',\n",
+       "       'StreamingTV', 'StreamingMovies', 'Contract', 'PaperlessBilling',\n",
+       "       'PaymentMethod', 'MonthlyCharges', 'TotalCharges', 'Churn',\n",
+       "       'Churn_Prediction'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "test_data_orig.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      customerID Churn Churn_Prediction\n",
+      "0     4376-KFVRS    No               No\n",
+      "1     2754-SDJRD    No              Yes\n",
+      "2     9917-KWRBE    No               No\n",
+      "3     0365-GXEZS    No               No\n",
+      "4     9385-NXKDA    No               No\n",
+      "...          ...   ...              ...\n",
+      "1404  5204-HMGYF    No               No\n",
+      "1405  9950-MTGYX    No               No\n",
+      "1406  3675-EQOZA    No               No\n",
+      "1407  3646-ITDGM    No               No\n",
+      "1408  3913-FCUUW    No               No\n",
+      "\n",
+      "[1409 rows x 3 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "selected_columns = test_data_orig[['customerID', 'Churn', 'Churn_Prediction']]\n",
     "\n",
@@ -156,9 +224,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.80\n",
+      "Precision: 0.65\n",
+      "Recall: 0.51\n",
+      "F1-Score: 0.57\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
