--- a/Notebooks/automl_amlsdkv2_train_automl.ipynb
+++ b/Notebooks/automl_amlsdkv2_train_automl.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,9 +69,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We could not find config.json in: . or in its parent directories. Please provide the full path to the config file or ensure that config.json exists in the parent directories.\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "ml_client = None\n",
@@ -96,8 +104,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Provide your own unique dataset name or use system generated UUID format. Providing your own name would help to locate dataset easily in the AML workspace. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1155c2a891714097b099ade1fee4bddb'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import uuid\n",
+    "\n",
+    "my_unique_dataset_name = uuid.uuid4().hex # Provide your own unique dataset name\n",
+    "my_unique_dataset_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +143,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Load training data from CSV file\n",
-    "training_data = pd.read_csv('./telcocustomerchurn/WA_Fn-UseC_-Telco-Customer-Churn.csv')\n",
+    "training_data = pd.read_csv('.././telcocustomerchurn/WA_Fn-UseC_-Telco-Customer-Churn.csv')\n",
     "\n",
     "# Separate the data into features (X) and labels (y)\n",
     "X = training_data.drop(columns=['Churn'])  # Assuming 'label' is the column containing class labels\n",
@@ -119,10 +157,10 @@
     "test_data = pd.concat([X_test, y_test], axis=1)\n",
     "\n",
     "# Save the generated test data to a new CSV file\n",
-    "test_data.to_csv('./telcocustomerchurn/WA_Fn-UseC_-Telco-Customer-Churn_Test.csv', index=False)\n",
+    "test_data.to_csv(f'.././telcocustomerchurn/{my_unique_dataset_name}-WA_Fn-UseC_-Telco-Customer-Churn_Test.csv', index=False)\n",
     "\n",
     "# Save the training data to a new CSV file\n",
-    "train_data.to_csv('./telcocustomerchurn/WA_Fn-UseC_-Telco-Customer-Churn_Train.csv', index=False)\n",
+    "train_data.to_csv(f'.././telcocustomerchurn/{my_unique_dataset_name}-WA_Fn-UseC_-Telco-Customer-Churn_Train.csv', index=False)\n",
     "\n"
    ]
   },
@@ -153,7 +191,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data_path = f'.././telcocustomerchurn/{my_unique_dataset_name}_train/{my_unique_dataset_name}-WA_Fn-UseC_-Telco-Customer-Churn_Train.csv'\n",
+    "test_data_path = f'.././telcocustomerchurn/{my_unique_dataset_name}_test/{my_unique_dataset_name}-WA_Fn-UseC_-Telco-Customer-Churn_Test.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,29 +211,58 @@
     "\n",
     "\n",
     "train_data_paths = [\n",
-    "    {'file': './wa_telco_customer_churn_train_data/WA_Fn-UseC_-Telco-Customer-Churn_Train.csv'},\n",
+    "    {'file': train_data_path},\n",
     "]\n",
     "\n",
     "train_table = mltable.from_delimited_files(train_data_paths)\n",
-    "train_table.save('./wa_telco_customer_churn_train_data')\n",
+    "train_table.save(f'.././telcocustomerchurn/{my_unique_dataset_name}_train')\n",
     "# Save the training data to a new CSV file\n",
     "train_data.to_csv(train_data_paths[0]['file'], index=False)\n",
-    "\n",
-    "\n",
-    "test_data_paths = [\n",
-    "    {'file': './wa_telco_customer_churn_test_data/WA_Fn-UseC_-Telco-Customer-Churn_Test.csv'},\n",
-    "]\n",
-    "\n",
-    "test_table = mltable.from_delimited_files(test_data_paths)\n",
-    "test_table.save('./wa_telco_customer_churn_test_data')\n",
-    "# Save the generated test data to a new CSV file\n",
-    "test_data.to_csv(test_data_paths[0]['file'], index=False)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'../telcocustomerchurn/1155c2a891714097b099ade1fee4bddb_test/1155c2a891714097b099ade1fee4bddb-WA_Fn-UseC_-Telco-Customer-Churn_Test.csv'"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os \n",
+    "test_data_paths = [\n",
+    "    {'file': test_data_path},\n",
+    "]\n",
+    "\n",
+    "\n",
+    "outdir = f'.././telcocustomerchurn/{my_unique_dataset_name}_test'\n",
+    "if not os.path.exists(outdir):\n",
+    "    os.mkdir(outdir)\n",
+    "# Save the generated test data to a new CSV file\n",
+    "test_data.to_csv(test_data_paths[0]['file'], index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +281,7 @@
     "        print(\n",
     "            f\"Data asset already exists. Name: {data_asset_def.name}, version: {data_asset_def.version}\"\n",
     "        )\n",
-    "    except:\n",
+    "    except Exception as ex:\n",
     "        ml_client.data.create_or_update(data_asset_def)\n",
     "        print(f\"Data asset created. Name: {data_asset_def.name}, version: {data_asset_def.version}\")\n",
     "\n",
@@ -221,13 +298,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data asset already exists. Name: 1155c2a891714097b099ade1fee4bddb-wa_telco_customer_churn_train_data, version: 1.0\n"
+     ]
+    }
+   ],
    "source": [
-    "data_path = \"./wa_telco_customer_churn_train_data\"\n",
-    "data_asset_name = \"wa_telco_customer_churn_train_data\"\n",
-    "data_asset_version = \"1.5\"\n",
+    "data_path = f'.././telcocustomerchurn/{my_unique_dataset_name}_train'\n",
+    "data_asset_name = f\"{my_unique_dataset_name}-wa_telco_customer_churn_train_data\"\n",
+    "data_asset_version = \"1.0\"\n",
     "training_data_asset =create_dataset(data_path, data_asset_name, data_asset_version, AssetTypes.MLTABLE)"
    ]
   },
@@ -240,12 +325,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Uploading 1155c2a891714097b099ade1fee4bddb-WA_Fn-UseC_-Te... (< 1 MB): 0.00B [00:00, ?B/s] (< 1 MB): 100%|##########| 196k/196k [00:00<00:00, 827kB/s] (< 1 MB): 100%|##########| 196k/196k [00:00<00:00, 774kB/s]\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data asset created. Name: 1155c2a891714097b099ade1fee4bddb-wa_telco_customer_churn_test_data, version: 1.0\n"
+     ]
+    }
+   ],
    "source": [
-    "data_path = \"./wa_telco_customer_churn_test_data_uri_file/wa_telco_customer_churn_test_data_uri_file.csv\"\n",
-    "data_asset_name = \"wa_telco_customer_churn_test_data_uri_file\"\n",
+    "data_path = test_data_path\n",
+    "data_asset_name = f\"{my_unique_dataset_name}-wa_telco_customer_churn_test_data\"\n",
     "data_asset_version = \"1.0\"\n",
     "test_data_asset = create_dataset(data_path, data_asset_name, data_asset_version, AssetTypes.URI_FILE)\n"
    ]
@@ -261,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +377,7 @@
     "# configure the classification job\n",
     "classification_job = automl.classification(\n",
     "    compute=\"cpu-cluster\",\n",
-    "    experiment_name=\"wa-telco-customer-churn-classification\",\n",
+    "    experiment_name=f\"{my_unique_dataset_name}-wa-telco-customer-churn-classification\",\n",
     "    training_data=training_data_input,\n",
     "    target_column_name=\"Churn\",\n",
     "    primary_metric=\"accuracy\",\n",
@@ -306,9 +408,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created job: compute: azureml:cpu-cluster\n",
+      "creation_context:\n",
+      "  created_at: '2023-09-08T21:27:32.252811+00:00'\n",
+      "  created_by: Anil Dwarakanath\n",
+      "  created_by_type: User\n",
+      "display_name: jolly_circle_ywmvvvb4dc\n",
+      "experiment_name: 1155c2a891714097b099ade1fee4bddb-wa-telco-customer-churn-classification\n",
+      "featurization:\n",
+      "  enable_dnn_featurization: false\n",
+      "  mode: auto\n",
+      "id: azureml:/subscriptions/f1a8fafd-a8a3-46d8-bb5e-01deb63d275d/resourceGroups/aml-rg/providers/Microsoft.MachineLearningServices/workspaces/aml-testws/jobs/jolly_circle_ywmvvvb4dc\n",
+      "limits:\n",
+      "  enable_early_termination: true\n",
+      "  max_concurrent_trials: 1\n",
+      "  max_cores_per_trial: -1\n",
+      "  max_nodes: 1\n",
+      "  max_trials: 5\n",
+      "  timeout_minutes: 600\n",
+      "  trial_timeout_minutes: 20\n",
+      "log_verbosity: info\n",
+      "n_cross_validations: 5\n",
+      "name: jolly_circle_ywmvvvb4dc\n",
+      "outputs: {}\n",
+      "primary_metric: accuracy\n",
+      "properties:\n",
+      "  azureml.git.dirty: 'True'\n",
+      "  mlflow.source.git.branch: main\n",
+      "  mlflow.source.git.commit: 41f032aa5a37018b74add5bcf52d67676731cbc2\n",
+      "  mlflow.source.git.repoURL: https://github.com/anildwarepo/CustomerChurnPredictionWorkshop.git\n",
+      "resources:\n",
+      "  instance_count: 1\n",
+      "  shm_size: 2g\n",
+      "services:\n",
+      "  Studio:\n",
+      "    endpoint: https://ml.azure.com/runs/jolly_circle_ywmvvvb4dc?wsid=/subscriptions/f1a8fafd-a8a3-46d8-bb5e-01deb63d275d/resourcegroups/aml-rg/workspaces/aml-testws&tid=7f1290b4-3c39-4277-a63e-c577680a12cf\n",
+      "  Tracking:\n",
+      "    endpoint: azureml://westus.api.azureml.ms/mlflow/v1.0/subscriptions/f1a8fafd-a8a3-46d8-bb5e-01deb63d275d/resourceGroups/aml-rg/providers/Microsoft.MachineLearningServices/workspaces/aml-testws?\n",
+      "status: NotStarted\n",
+      "tags:\n",
+      "  my_custom_tag: My custom value\n",
+      "target_column_name: Churn\n",
+      "task: classification\n",
+      "training:\n",
+      "  allowed_training_algorithms:\n",
+      "  - gradient_boosting\n",
+      "  - decision_tree\n",
+      "  - light_gbm\n",
+      "  - random_forest\n",
+      "  enable_dnn_training: false\n",
+      "  enable_model_explainability: true\n",
+      "  enable_onnx_compatible_models: true\n",
+      "  enable_stack_ensemble: true\n",
+      "  enable_vote_ensemble: true\n",
+      "  ensemble_model_download_timeout_minutes: 5\n",
+      "  training_mode: auto\n",
+      "training_data:\n",
+      "  path: azureml://subscriptions/f1a8fafd-a8a3-46d8-bb5e-01deb63d275d/resourcegroups/aml-rg/workspaces/aml-testws/datastores/workspaceblobstore/paths/LocalUpload/831a4210952ed82242598f511b6d750a/1155c2a891714097b099ade1fee4bddb_train/\n",
+      "  type: mltable\n",
+      "type: automl\n",
+      "validation_data:\n",
+      "  type: mltable\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'https://ml.azure.com/runs/jolly_circle_ywmvvvb4dc?wsid=/subscriptions/f1a8fafd-a8a3-46d8-bb5e-01deb63d275d/resourcegroups/aml-rg/workspaces/aml-testws&tid=7f1290b4-3c39-4277-a63e-c577680a12cf'"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Submit the AutoML job\n",
     "returned_job = ml_client.jobs.create_or_update(\n",
@@ -337,9 +518,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "azureml://74f7aea0-6b0e-4b75-a8e4-001d9a929102.workspace.westus.api.azureml.ms/mlflow/v1.0/subscriptions/f1a8fafd-a8a3-46d8-bb5e-01deb63d275d/resourceGroups/aml-rg/providers/Microsoft.MachineLearningServices/workspaces/aml-testws\n"
+     ]
+    }
+   ],
    "source": [
     "import mlflow\n",
     "\n",
@@ -353,9 +542,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Current tracking uri: azureml://74f7aea0-6b0e-4b75-a8e4-001d9a929102.workspace.westus.api.azureml.ms/mlflow/v1.0/subscriptions/f1a8fafd-a8a3-46d8-bb5e-01deb63d275d/resourceGroups/aml-rg/providers/Microsoft.MachineLearningServices/workspaces/aml-testws\n"
+     ]
+    }
+   ],
    "source": [
     "# Set the MLFLOW TRACKING URI\n",
     "\n",
@@ -366,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +614,7 @@
     ")\n",
     "from azure.ai.ml.constants import ModelType\n",
     "\n",
-    "model_name = \"wa_telco_customer_churn_model_best\"\n",
+    "model_name = f\"{my_unique_dataset_name}-wa_telco_customer_churn_model_best\"\n",
     "model = Model(\n",
     "    path=f\"azureml://jobs/{best_run.info.run_id}/outputs/artifacts/outputs/mlflow-model/\",\n",
     "    name=model_name,\n",
@@ -432,9 +630,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's pick the latest version of the model\n",
     "latest_model = max(\n",
@@ -453,23 +659,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
     "# Create local folder\n",
-    "local_dir = \"./artifact_downloads\"\n",
+    "local_dir = \".././artifact_downloads\"\n",
     "if not os.path.exists(local_dir):\n",
     "    os.mkdir(local_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading artifacts:   0%|          | 0/20 [00:00<?, ?it/s]2023/09/08 14:49:50 INFO mlflow.store.artifact.artifact_repo: The progress bar can be disabled by setting the environment variable MLFLOW_ENABLE_ARTIFACTS_PROGRESS_BAR to false\n",
+      "Downloading artifacts: 100%|██████████| 20/20 [00:04<00:00,  4.66it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Artifacts downloaded in: c:\\source\\repos\\aml-customer-churn-prediction\\artifact_downloads\\outputs\n",
+      "Artifacts: ['conda_env_v_1_0_0.yml', 'engineered_feature_names.json', 'env_dependencies.json', 'featurization_summary.json', 'generated_code', 'internal_cross_validated_models.pkl', 'mlflow-model', 'model.onnx', 'model.pkl', 'model_onnx.json', 'pipeline_graph.json', 'run_id.txt', 'scoring_file_pbi_v_1_0_0.py', 'scoring_file_v_1_0_0.py', 'scoring_file_v_2_0_0.py']\n"
+     ]
+    }
+   ],
    "source": [
     "# Download run's artifacts/outputs\n",
     "local_path = download_artifacts(\n",
